--- a/home.html
+++ b/home.html
@@ -7,5 +7,11 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <input type="file" accept="video/*" />
+      <input type="text" required placeholder="Name" />
+      <input type="submit" value="확인" />
+    </form>
+  </body>
 </html>
