--- a/home.html
+++ b/home.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <form>
-      <input type="file" accept="video/*" />
-      <input type="text" required placeholder="Name" />
-      <input type="submit" value="확인" />
+      <label for="fx">Website</label>
+      <input id="fx" type="date" />
     </form>
   </body>
 </html>
