--- a/home.html
+++ b/home.html
@@ -8,9 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <form>
-      <label for="fx">Website</label>
-      <input id="fx" type="date" />
-    </form>
+    <header>
+      <h1>Nico</h1>
+    </header>
+    <main>
+      <address>울산 !!!</address>
+    </main>
+    <footer>약관정보</footer>
   </body>
 </html>
