box 개념: block과 inline

--- a/excute.html
+++ b/excute.html
@@ -8,12 +8,12 @@
     <title>Document</title>
     <style>
       div {
-        width: 150px;
         height: 150px;
+        width: 150px;
         background-color: tomato;
       }
       span {
-        background-color: wheat;
+        background-color: turquoise;
       }
     </style>
   </head>
