--- a/home.html
+++ b/home.html
@@ -7,27 +7,22 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
-      div {
-        width: 150px;
-        height: 150px;
+      html {
         background-color: tomato;
       }
-      span {
-        background-color: wheat;
+      body {
+        background-color: violet;
+        margin: 20px 10px;
+      }
+      div {
+        background-color: white;
+        width: 150px;
+        height: 150px;
+        margin-left: 50px;
       }
     </style>
   </head>
   <body>
     <div></div>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <a href="#">link</a>
-    <span>hello</span>
-    <img
-      src="https://i.pinimg.com/originals/c6/f4/4a/c6f44a7aba8db7ae72bfd08e0160c752.png"
-    />
-    <address>hello</address>
-    <span>hello</span>
   </body>
 </html>
