--- a/excute.html
+++ b/excute.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="박민형의 홈페이지 입니다!" />
-    <title>Document</title>
+    <title>The Park Times</title>
     <style>
-      div {
-        height: 150px;
-        width: 150px;
+      html {
         background-color: tomato;
       }
-      span {
-        background-color: turquoise;
+      body {
+        margin-top: 20px;
+        margin-left: 10px;
+        margin-right: 5px;
+        margin-bottom: 10px;
+        background-color: thistle;
+      }
+      div {
+        margin-left: 50px;
+        height: 150px;
+        width: 150px;
+        background-color: whitesmoke;
       }
     </style>
+    <meta charset="utf-8" />
+    <meta name="description" content="This is my website" />
   </head>
   <body>
     <div></div>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <a href="#">link</a>
-    <span>hello</span>
-    <img
-      src="https://i.pinimg.com/originals/c6/f4/4a/c6f44a7aba8db7ae72bfd08e0160c752.png"
-    />
-    <address>hello</address>
-    <span>hello</span>
   </body>
 </html>
