--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
+      * {
+        border: 2px solid black;
+      }
       html {
         background-color: tomato;
       }
@@ -16,7 +19,7 @@
         padding: 20px;
       }
       div {
-        padding: 10px;
+        padding: 20px;
       }
       #first {
         width: 150px;
@@ -38,13 +41,16 @@
         height: 25px;
         background-color: blanchedalmond;
       }
+      span {
+        border-style: dotted;
+      }
     </style>
   </head>
   <body>
     <div id="first">
       <div id="second">
         <div id="third">
-          <div id="fourth"></div>
+          <span>hello</span>
         </div>
       </div>
     </div>
