--- a/home.html
+++ b/home.html
@@ -7,52 +7,29 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
-      * {
-        border: 2px solid black;
-      }
-      html {
-        background-color: tomato;
-      }
       body {
-        background-color: violet;
         margin: 20px;
-        padding: 20px;
       }
-      div {
-        padding: 20px;
+      .btn {
+        border-radius: 5px;
+        padding: 5px 10px;
       }
-      #first {
-        width: 150px;
-        height: 150px;
-        background-color: white;
+      .tomato {
+        background-color: tomato;
+        color: white;
       }
-      #second {
-        width: 100px;
-        height: 100px;
-        background-color: green;
-      }
-      #third {
-        width: 50px;
-        height: 50px;
-        background-color: wheat;
-      }
-      #fourth {
-        width: 25px;
-        height: 25px;
-        background-color: blanchedalmond;
-      }
-      span {
-        border-style: dotted;
+      .green {
+        background-color: teal;
       }
     </style>
   </head>
   <body>
-    <div id="first">
-      <div id="second">
-        <div id="third">
-          <span>hello</span>
-        </div>
-      </div>
-    </div>
+    <span class="btn green">hello</span>
+    <span class="btn tomato">hello</span>
+    <span class="btn green">hello</span>
+    <span class="btn tomato">hello</span>
+    <span class="btn green">hello</span>
+    <span class="btn tomato">hello</span>
+    <span class="btn green">hello</span>
   </body>
 </html>
