--- a/home.html
+++ b/home.html
@@ -8,28 +8,25 @@
     <title>Document</title>
     <style>
       body {
+        height: 100vh;
         margin: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
-      .btn {
-        border-radius: 5px;
-        padding: 5px 10px;
-      }
-      .tomato {
-        background-color: tomato;
-        color: white;
-      }
-      .green {
+      div {
+        width: 300px;
+        height: 300px;
         background-color: teal;
+      }
+      #wheat {
+        background-color: wheat;
       }
     </style>
   </head>
   <body>
-    <span class="btn green">hello</span>
-    <span class="btn tomato">hello</span>
-    <span class="btn green">hello</span>
-    <span class="btn tomato">hello</span>
-    <span class="btn green">hello</span>
-    <span class="btn tomato">hello</span>
-    <span class="btn green">hello</span>
+    <div></div>
+    <div id="wheat"></div>
+    <div></div>
   </body>
 </html>
