--- a/home.html
+++ b/home.html
@@ -13,11 +13,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
       }
       div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 300px;
         height: 300px;
         background-color: teal;
+        color: white;
       }
       #wheat {
         background-color: wheat;
@@ -25,8 +30,8 @@
     </style>
   </head>
   <body>
-    <div></div>
-    <div id="wheat"></div>
-    <div></div>
+    <div>1</div>
+    <div id="wheat">2</div>
+    <div>3</div>
   </body>
 </html>
