--- a/home.html
+++ b/home.html
@@ -8,30 +8,25 @@
     <title>Document</title>
     <style>
       body {
-        height: 100vh;
+        height: 1000vh;
         margin: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
       }
       div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
         width: 300px;
         height: 300px;
-        background-color: teal;
-        color: white;
       }
       #wheat {
-        background-color: wheat;
+        background-color: black;
+        position: fixed;
+        opacity: 0.2;
+      }
+      #diffrent {
+        background-color: yellowgreen;
       }
     </style>
   </head>
   <body>
-    <div>1</div>
-    <div id="wheat">2</div>
-    <div>3</div>
+    <div id="wheat"></div>
+    <div id="diffrent"></div>
   </body>
 </html>
