--- a/home.html
+++ b/home.html
@@ -8,25 +8,28 @@
     <title>Document</title>
     <style>
       body {
-        height: 1000vh;
-        margin: 20px;
+        height: 100vh;
+        margin: 50px;
       }
       div {
         width: 300px;
         height: 300px;
+        background-color: wheat;
+        position: relative;
       }
-      #wheat {
-        background-color: black;
-        position: fixed;
-        opacity: 0.2;
-      }
-      #diffrent {
-        background-color: yellowgreen;
+      #teal {
+        width: 100px;
+        height: 100px;
+        background-color: teal;
+        position: absolute;
+        bottom: 0;
+        right: 0;
       }
     </style>
   </head>
   <body>
-    <div id="wheat"></div>
-    <div id="diffrent"></div>
+    <div>
+      <div id="teal"></div>
+    </div>
   </body>
 </html>
