--- a/home.html
+++ b/home.html
@@ -11,25 +11,23 @@
         height: 100vh;
         margin: 50px;
       }
-      div {
-        width: 300px;
-        height: 300px;
-        background-color: wheat;
-        position: relative;
+      span {
+        background-color: tomato;
       }
-      #teal {
-        width: 100px;
-        height: 100px;
+      span:nth-child(3n) {
         background-color: teal;
-        position: absolute;
-        bottom: 0;
-        right: 0;
       }
     </style>
   </head>
   <body>
-    <div>
-      <div id="teal"></div>
-    </div>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
   </body>
 </html>
