--- a/home.html
+++ b/home.html
@@ -12,22 +12,26 @@
         margin: 50px;
       }
       span {
-        background-color: tomato;
+        background-color: yellowgreen;
+        border-radius: 5px;
+        padding: 5px;
       }
-      span:nth-child(3n) {
-        background-color: teal;
+      p span {
+        color: white;
+      }
+      p + span {
+        text-decoration: underline;
       }
     </style>
   </head>
   <body>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+        obcaecati pariatur voluptatibus recusandae qui! Earum eaque quas atque
+        quos. <span>inside</span>
+      </p>
+      <span>hello</span>
+    </div>
   </body>
 </html>
