--- a/excute.html
+++ b/excute.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
-    <title>The Park Times</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="박민형의 홈페이지 입니다!" />
+    <title>Excute</title>
     <style>
       body {
         height: 100vh;
         margin: 50px;
       }
-      span {
-        background-color: yellowgreen;
-        padding: 5px;
-        border-radius: 10px;
+
+      input {
+        border: 1px solid wheat;
       }
-      p span {
-        color: white;
+      input:required {
+        border-color: tomato;
       }
-      p + span {
-        text-decoration: underline;
+      input[placeholder~="name"] {
+        background-color: pink;
       }
     </style>
     <meta charset="utf-8" />
@@ -24,12 +27,11 @@
   </head>
   <body>
     <div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-        obcaecati pariatur voluptatibus recusandae qui! Earum eaque quas atque
-        quos. <span>inside</span>
-      </p>
-      <span>hello</span>
+      <form>
+        <input type="text" placeholder="First name" />
+        <input type="text" placeholder="Last name" />
+        <input type="password" required placeholder="password" />
+      </form>
     </div>
   </body>
 </html>
