--- a/excute.html
+++ b/excute.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="박민형의 홈페이지 입니다!" />
-    <title>Excute</title>
+    <title>The Park Times</title>
     <style>
       body {
         height: 100vh;
         margin: 50px;
       }
-
-      input {
-        border: 1px solid wheat;
+      span {
+        background-color: yellowgreen;
+        padding: 5px;
+        border-radius: 10px;
       }
-      input:required {
-        border-color: tomato;
+      a:visited {
+        color: tomato;
       }
-      input[placeholder~="name"] {
-        background-color: pink;
+      a:hover {
+        color: teal;
+      }
+      a:focus {
+        color: turquoise;
+      }
+      form {
+        border: 1px solid salmon;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+      }
+      form:focus-within {
+        border-color: seagreen;
+      }
+      /* form:hover input {
+        background-color: sienna;
+      } */
+      form:hover input:focus {
+        background-color: sienna;
       }
     </style>
     <meta charset="utf-8" />
     <meta name="description" content="This is my website" />
   </head>
   <body>
-    <div>
-      <form>
-        <input type="text" placeholder="First name" />
-        <input type="text" placeholder="Last name" />
-        <input type="password" required placeholder="password" />
-      </form>
-    </div>
+    <a href="https://apple.com">Go to apple</a>
+    <form>
+      <input type="text" name="" id="" />
+      <input type="text" name="" id="" />
+      <input type="text" name="" id="" />
+    </form>
   </body>
 </html>
