--- a/home.html
+++ b/home.html
@@ -7,27 +7,25 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
-      :root {
-        --main-color: #fcce00;
-        --default-border: 1px solid var(--main-color);
-      }
-      body {
-        height: 100vh;
-        margin: 50px;
-      }
-      p {
-        background-color: var(--main-color);
-      }
       a {
-        color: var(--main-color);
-        border: var(--default-border);
+        width: 250px;
+        height: 60px;
+        background-color: tomato;
+        color: wheat;
+        font-size: 50px;
+        text-decoration: none;
+        border-radius: 10px;
+        padding: 5px;
+        transition: all 2s ease-in-out;
+      }
+      a:hover {
+        background-color: wheat;
+        color: tomato;
+        border-radius: 30px;
       }
     </style>
   </head>
   <body>
-    <p>hihihihihihihiihhihi fsdfdfsfsdfsd</p>
-    <div>
-      <a href="#">website</a>
-    </div>
+    <a href="#">Go Home</a>
   </body>
 </html>
