--- a/home.html
+++ b/home.html
@@ -16,7 +16,8 @@
         text-decoration: none;
         border-radius: 10px;
         padding: 5px;
-        transition: all 2s ease-in-out;
+        transition: color 1s cubic-bezier(0.6, -0.28, 0.735, 0.045),
+          border-radius 5s ease-in-out, background-color 10s ease-in-out;
       }
       a:hover {
         background-color: wheat;
