--- a/home.html
+++ b/home.html
@@ -7,15 +7,20 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
+      @keyframes rotateImg {
+        from {
+          transform: rotateY(0);
+        }
+        to {
+          transform: rotateY(180deg) translateX(-100px);
+        }
+      }
       img {
-        width: 500px;
-        height: 500px;
+        width: 300px;
+        height: 300px;
         border-radius: 50%;
         border: 1px solid black;
-        transition: transform 2s ease-in-out;
-      }
-      img:hover {
-        transform: rotateY(360deg) scale(0.5);
+        animation: rotateImg 3s ease-in-out infinite;
       }
     </style>
   </head>
