--- a/home.html
+++ b/home.html
@@ -7,20 +7,38 @@
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Document</title>
     <style>
-      @keyframes rotateImg {
-        from {
+      body {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+      }
+      @keyframes superSexyCoinFlip {
+        0% {
           transform: rotateY(0);
         }
-        to {
-          transform: rotateY(180deg) translateX(-100px);
+        25% {
+          transform: scale(2);
+        }
+        50% {
+          border-radius: 0px;
+          transform: rotateY(180deg) translateY(100px);
+          border-color: tomato;
+          opacity: 0;
+        }
+        75% {
+          transform: scale(5);
+          border-radius: 20px;
+        }
+        100% {
+          transform: rotateY(0);
         }
       }
       img {
-        width: 300px;
-        height: 300px;
+        border: 5px solid black;
+        width: 200px;
         border-radius: 50%;
-        border: 1px solid black;
-        animation: rotateImg 3s ease-in-out infinite;
+        animation: superSexyCoinFlip 5s ease-in-out infinite;
       }
     </style>
   </head>
