--- a/excute.html
+++ b/excute.html
@@ -8,41 +8,42 @@
         height: 100vh;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
       }
-      @keyframes superSexyCoinFlip {
-        0% {
-          transform: rotateY(0);
-        }
-        25% {
-          transform: scale(2);
-        }
-        50% {
-          border-radius: 0px;
-          transform: rotateY(180deg) translateY(100px);
-          border-color: tomato;
-          opacity: 0;
-        }
-        75% {
-          transform: scale(5);
-          border-radius: 20px;
-        }
-        100% {
-          transform: rotateY(0);
-        }
-      }
-      img {
-        border: 5px solid black;
+      div {
+        background-color: teal;
         width: 200px;
-        border-radius: 50%;
-        animation: superSexyCoinFlip 5s ease-in-out infinite;
+        height: 200px;
+      }
+      /* @media screen and (max-width: 600px) {
+        div {
+          background-color: tomato;
+        }
+      } */
+      @media screen and (min-width: 601px) and (max-width: 1200px) and (orientation: portrait) {
+        div {
+          background-color: wheat;
+        }
+      }
+      /* @media screen and (min-width: 1200px) {
+        div {
+          background-color: turquoise;
+        }
+      } */
+      span {
+        font-size: 36px;
+      }
+      @media screen and (orientation: landscape) {
+        span {
+          display: none;
+        }
       }
     </style>
     <meta charset="utf-8" />
     <meta name="description" content="This is my website" />
   </head>
   <body>
-    <img
-    src="https://coinpan.com/files/attach/images/198/847/062/264/0f4ba1b58bb7cffe8f81a933d7092994.jpeg""
-    />
+    <div></div>
+    <span>Please flip your phone</span>
   </body>
 </html>
