--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
+        <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
         <span>11%</span>
+        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <script
+      src="https://kit.fontawesome.com/a59a29274e.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
