index 페이지 작업중: Sign Up Screen part 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="박민형의 홈페이지 입니다!" />
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -22,6 +22,20 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <header id="welcome-header">
+      <h1>Welcome to KokoaTalk</h1>
+      <p>
+        If you have a Kokoa Account, log in with your email or phone number.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kakao Account or Password</a>
+    </form>
 
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
