index 페이지 작업중: Status Bar CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="박민형의 홈페이지 입니다!" />
     <title>Welcome to Kokoa Clone</title>
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
