--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <header id="welcome-header">
-      <h1>Welcome to KokoaTalk</h1>
-      <p>
+      <h1 class="welcome-header__title">Welcome to KokoaTalk</h1>
+      <p class="welcome-header__text">
         If you have a Kokoa Account, log in with your email or phone number.
       </p>
     </header>
