--- a/friends.html
+++ b/friends.html
@@ -38,6 +38,21 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          class="user-component__avatar"
+          src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+          alt=""
+        />
+        <div class="user-component__text">
+          <h4 class="user-component__title">한소희</h4>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
