--- a/friends.html
+++ b/friends.html
@@ -38,20 +38,43 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component">
-      <div class="user-component__column">
-        <img
-          class="user-component__avatar"
-          src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
-          alt=""
-        />
-        <div class="user-component__text">
-          <h4 class="user-component__title">한소희</h4>
-          <h6 class="user-component__subtitle">this text whatever</h6>
+    <main class="friend-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar user-component__avatar--xl"
+            src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+            alt=""
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">한소희</h4>
+            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+
+      <div class="friends-screen__channel">
+        <span>Chanel</span>
+        <i class="fas fa-chevron-up fa-xs"></i>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar user-component__avatar--sm"
+            src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+            alt=""
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Channel</h4>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span>2</span>
+          <i class="fas fa-chevron-right fa-xs"></i>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
