--- a/friends.html
+++ b/friends.html
@@ -55,23 +55,28 @@
       </div>
 
       <div class="friends-screen__channel">
-        <span>Chanel</span>
-        <i class="fas fa-chevron-up fa-xs"></i>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar--sm"
-            src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
-            alt=""
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Channel</h4>
-          </div>
+        <div class="friends-screen__channel-header">
+          <span>Chanel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
         </div>
-        <div class="user-component__column">
-          <span>2</span>
-          <i class="fas fa-chevron-right fa-xs"></i>
+
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+              alt=""
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
         </div>
       </div>
     </main>
