--- a/find.html
+++ b/find.html
@@ -81,7 +81,17 @@
               <span class="open-post__member_status">Active</span>
             </div>
           </div>
-          <div class="open-post__column"></div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+                alt=""
+              />
+              <div class="open-post__heart-count">
+                <i class="fas fa-heart fa-xs"></i><span>326</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
