--- a/more.html
+++ b/more.html
@@ -30,7 +30,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
           <div class="new-alram"></div>
         </span>
       </div>
@@ -79,21 +79,21 @@
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-quote-right fa-2x"></i>
             </div>
             <span class="more-suggestions__icon-text">Kakao Story</span>
           </div>
 
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-quote-right fa-2x"></i>
             </div>
             <span class="more-suggestions__icon-text">Kakao Story</span>
           </div>
 
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-quote-right fa-2x"></i>
             </div>
             <span class="more-suggestions__icon-text">Kakao Story</span>
           </div>
