--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats</title>
+    <title>Settings</title>
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -24,40 +24,7 @@
       </div>
     </div>
 
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span>
-          <a href="settings.html">
-            <i class="fas fa-cog fa-lg"></i></span>
-          </a>
-      </div>
-    </header>
-
-    <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar"
-            src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
-            alt=""
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">한소희</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kakao Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-    </main>
+    <main class="main-screen more-screen"></main>
 
     <nav class="nav">
       <ul class="nav__list">
