chat 페이지 작업중: Chat Screen Part2

--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
       <div class="status-bar__column">
         <span>11%</span>
         <i class="fas fa-battery-full"></i>
-        <i class="fas fa-bolt"></i>
+        <i class="fas fa-bolt chat-bolt"></i>
       </div>
     </div>
 
@@ -35,10 +35,13 @@
       </div>
       <div class="alt-header__column">
         <i class="fas fa-search fa-lg"></i>
+        <i class="fas fa-bars fa-lg"></i>
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuseday, une 30, 2020</div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
