--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,20 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuseday, une 30, 2020</div>
+      <div class="chat__timestamp">Tuseday, june 30, 2020</div>
+      <div class="message-row">
+        <img
+          src="https://image.ajunews.com/content/image/2020/07/19/20200719161256190240.jpg"
+          alt=""
+        />
+        <div class="message-row__content">
+          <span class="message__author">Park</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
