시작 페이지 작업: Splash Screen Part1

--- a/friends.html
+++ b/friends.html
@@ -113,6 +113,10 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
       crossorigin="anonymous"
