--- a/chat.html
+++ b/chat.html
@@ -66,10 +66,10 @@
     </main>
 
     <form class="reply">
-      <div class="reply_column">
+      <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
       </div>
-      <div class="reply_column">
+      <div class="reply__column">
         <input type="text" placeholder="Write a message..." />
         <i class="far fa-smile-wink fa-lg"></i>
         <button>
