--- a/chat.html
+++ b/chat.html
@@ -78,6 +78,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
       crossorigin="anonymous"
