--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <a href="#">Find Kakao Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
       crossorigin="anonymous"
