--- a/settings.html
+++ b/settings.html
@@ -92,6 +92,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a59a29274e.js"
       crossorigin="anonymous"
