--- a/friends.html
+++ b/friends.html
@@ -118,7 +118,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super super big ㅠㅠ</span>
+      <span>Your screen is super finish</span>
     </div>
 
     <script
