--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
     </header>
 
-    <form action="friends.html" method="POST" id="login-form">
+    <form action="friends.html" method="GET" id="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
